fix: .list-data align-items

--- a/src/stylesheets/components/_list.scss
+++ b/src/stylesheets/components/_list.scss
@@ -53,6 +53,8 @@
   }
 
   > li {
+    @extend .align-items-start;
+
     @media not print {
       @container list-data (min-width: 560px) {
         display: flex;
